Fix zoom image origin and disable modal scrollbars

--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,7 @@ div:has(> #positive_prompt) {
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
     background-color: rgba(20, 20, 20, 0.95);
     user-select: none;
     -webkit-user-select: none;
